--- a/roles/telegraf/templates/telegraf.j2
+++ b/roles/telegraf/templates/telegraf.j2
@@ -1,4 +1,4 @@
-INFLUX_URL="https://influxdb.{{ host_local }}"
+INFLUX_URL="https://{{ influxdb_subdomain }}.{{ host_local }}"
 INFLUX_TOKEN="{{ influxdb_token }}"
 INFLUX_ORG="{{ influxdb_org }}"
 INFLUX_BUCKET="{{ influxdb_bucket }}"
