feat: improving snapraid role

--- a/roles/snapraid/templates/snapraid-btrfs-runner.conf.j2
+++ b/roles/snapraid/templates/snapraid-btrfs-runner.conf.j2
@@ -2,18 +2,18 @@
 {{ ansible_managed | comment }}
 
 [snapraid-btrfs]
-executable = {{ snapraid_snapraid_btrfs_executable }}
-pool = {{ snapraid_snapraid_btrfs_pool | lower }}
-cleanup = {{ snapraid_snapraid_btrfs_cleanup | lower }}
+executable = {{ snapraid_btrfs_executable }}
+pool = {{ snapraid_btrfs_pool | lower }}
+cleanup = {{ snapraid_btrfs_cleanup | lower }}
 
 [snapper]
-executable = {{ snapraid_snapper_executable }}
+executable = {{ snapper_executable }}
 
 [snapraid]
-executable = {{ snapraid_snapraid_executable }}
-config = {{ snapraid_snapraid_config }}
-deletethreshold = {{ snapraid_snapraid_deletethreshold }}
-touch = {{ snapraid_snapraid_touch | lower }}
+executable = {{ snapraid_executable }}
+config = {{ snapraid_config }}
+deletethreshold = {{ snapraid_deletethreshold }}
+touch = {{ snapraid_touch | lower }}
 
 [logging]
 file = {{ snapraid_logging_file }}
