--- a/roles/radicale/templates/radicale.subdomain.conf.j2
+++ b/roles/radicale/templates/radicale.subdomain.conf.j2
@@ -2,14 +2,13 @@
 server {
     {% include "roles/swag/templates/nginx/common.j2" %}
 
-    server_name {{ stirling_pdf_subdomain }}.*;
+    server_name {{ radicale_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-
-        set $upstream_app {{ stirling_pdf_container_name }};
-        set $upstream_port 8080;
+        set $upstream_app {{ radicale_container_name }};
+        set $upstream_port 5232;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
     }
